fix doc symbols readability + accuracy of false declarations (orange has 3 vowels, not 5

--- a/css/doc.css
+++ b/css/doc.css
@@ -77,6 +77,7 @@ header {
 
 .doc-h3 {
     padding: 20px 0;
+    font-size: 1.70rem;
 }
 
 .doc-h4 {
